--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -29,7 +29,17 @@ body {
  color: var(--color-black);
   font-family: var(--font-cardo);
  font-weight: 400;
- padding: 3rem;
+
+}
+@media (min-width: 500px) {
+  body {
+    padding: 2rem;
+  }
+}
+@media (min-width: 800px) {
+  body {
+    padding: 3rem;
+  }
 }
 h1,h2,h3,h4,h5,h6 {
   font-family: var(--font-cardo);
@@ -48,6 +58,7 @@ body a {
 }
 .btn-primary {
   background-color: var(--color-purple);
+  transition: all ease 0.8s;
 }
 .btn-primary:hover {
   background-color: var(--color-purple-dark);
@@ -89,6 +100,13 @@ a.social-media-icon {
 .social-media-icon:hover {
   color: var(--color-purple);
   transform: scale(1.2);
+}
+a.link {
+  color: var(--color-purple);
+  transition: color ease 0.8s;
+}
+a.link:hover {
+  color: var(--color-purple-dark);
 }
 
 /*MODAL*/
@@ -133,8 +151,11 @@ a.social-media-icon {
 .story-container {
   text-align: left;
 }
-.author {
+.author, .separator {
   color: var(--color-purple);
+}
+.separator {
+  margin: 15rem 0;
 }
 .chapter {
   height: 0.5rem;
