--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -66,6 +66,9 @@ body a {
 .btn-check:focus+.btn-primary, .btn-primary:focus {
   background-color: var(--color-purple-dark);
 }
+.btn > a {
+  color: var(--color-bg)
+}
 .form-control {
   border:none;
   background-color: var(--color-purple);
@@ -87,6 +90,7 @@ label {
 min-height: calc(100vh - 6rem);
 }
 /*USEFULL CLASES*/
+
 .text-light-black {
   color: var(--color-light-black);
 }
