--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -18,9 +18,14 @@
   --color-black: #444444;
   --color-light-black: #888;
   --color-primary: #bce4e3;
-  --color-purple-light: #e4e2f0;
+  --color-purple-light: #945d76;
+  --color-purple: #6e3a51;
+  --color-purple-dark: #54263b;
+
+  /*bordo: 6E3A51*/
+  /* --color-purple-light: #e4e2f0;
   --color-purple: #b9b2dc;
-  --color-purple-dark: #9f95d1;
+  --color-purple-dark: #9f95d1; */
 }
 body {
   background-color: var(--color-purple);
@@ -163,7 +168,7 @@ a.link-itau:hover {
 }
 .author,
 .separator {
-  color: var(--color-purple);
+  color: var(--color-purple-light);
 }
 .separator {
   margin: 15rem 0;
